--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <div class="projectGrid">
   <div><button class="project"><a href="./tonnetzGrid.html">Tonnetz Grid</a></button></div>
   <div><button class="project">Cosmic Strings</button></div>
-  <div><button class="project">Music Boids</button></div>
-  <div><button class="project disabled">Button 4</button></div>
-  <div><button class="project disabled">Button 5</button></div>
-  <div><button class="project disabled">Button 6</button></div>
+  <div><button class="project"><a href="./BoidProject/index.html">Music Boids</a></button></div>
+  <div><button class="project disabled">In Progress...</button></div>
+  <div><button class="project disabled">In Progress...</button></div>
+  <div><button class="project disabled">In Progress...</button></div>
 </div>
 
 </body>
