--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Contributers: Jesse Berezovsky and Huay Din <br>Last updated: 11/28/2020</p>
 <div class="projectGrid">
   <div><button class="project"><a href="./tonnetzGrid.html">Tonnetz Grid</a></button></div>
-  <div><button class="project">Cosmic Strings</button></div>
+  <div><button class="project"><a href='./Strings/index.html">Cosmic Strings</a></button></div>
   <div><button class="project"><a href="./BoidProject/index.html">Music Boids</a></button></div>
   <div><button class="project disabled">In Progress...</button></div>
   <div><button class="project disabled">In Progress...</button></div>
