--- a/Strings/index.html
+++ b/Strings/index.html
@@ -29,6 +29,7 @@
 
 	<div id="title">
 		<p> <emph>2020 Generative Music Project Display</emph> </p>
+		<p>Still in progress, will only show static wires</p> 
 	</div>
 
 	<div id="display">
