--- a/BoidProject/index.html
+++ b/BoidProject/index.html
@@ -10,8 +10,17 @@
   <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
 </head>
+<script src="js/jquery.js"></script>
+<script src="js/webpd-latest.js"></script>
+<script>
+    // var patch
+    // $.get('patches/myPatch.pd', function(patchStr) {
+    //   patch = Pd.loadPatch(patchStr)
+    //   Pd.start()
+    // })
+</script>
 
 <body id="container">
-  <script type="module" src="./attempt1.js"></script>
+  <script type="module" src="./attempt4.js"></script>
 </body>
 </html>
