--- a/tonnetzGrid.html
+++ b/tonnetzGrid.html
@@ -4,12 +4,25 @@
     <title>Tonnetz</title>
 
     <meta charset="utf-8">
+    <link rel="stylesheet" href="tonnetz.css">
 </head>
 <body>
 
+  <div id="topBar"><p id="title">Tonnetz Grid</p></div>
   <canvas id="grid"></canvas>
 
   <script src="tonnetzGrid.js" type="module"></script>
+
+  <div id = "bottomBar">
+    <div id="buttons">
+    <a id="guis"><br>Change Color: </a>
+    <button id="red" class="button red">r</button>
+    <button id="blue" class="button blue">b</button>
+    <button id="green" class="button green">g</button>
+    <button id="purple" class="button purple">p</button>
+    <button id="grey" class="button grey">gr</button>
+    </div>
+  </div>
 
 </body>
 </html>
