--- a/BoidProject/index.html
+++ b/BoidProject/index.html
@@ -7,20 +7,24 @@
   <title>Boid Project</title>
   <meta name="Huay">
 
-  <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
-
 </head>
 <script src="js/jquery.js"></script>
 <script src="js/webpd-latest.js"></script>
+<script type="module" src="./BoidsPdTest.js"></script>
+
 <script>
-    // var patch
-    // $.get('patches/myPatch.pd', function(patchStr) {
-    //   patch = Pd.loadPatch(patchStr)
-    //   Pd.start()
-    // })
+  // var patch
+  // $.get('./patches/main.pd', function(patchStr) {
+  //   patch = Pd.loadPatch(patchStr)
+  //   Pd.start()
+  // })
 </script>
 
 <body id="container">
-  <script type="module" src="./attempt4.js"></script>
+
+  <div>
+    <input type="file" id="file-input">
+  </div>
+
 </body>
 </html>
