--- a/BoidProject/index.html
+++ b/BoidProject/index.html
@@ -10,7 +10,7 @@
 </head>
 <script src="js/jquery.js"></script>
 <script src="js/webpd-latest.js"></script>
-<script type="module" src="./BoidsPdTest.js"></script>
+<script type="module" src="./boidSounds.js"></script>
 
 <script>
   // var patch
