--- a/BoidProject/index.html
+++ b/BoidProject/index.html
@@ -13,11 +13,11 @@
 <script type="module" src="./boidSounds.js"></script>
 
 <script>
-  // var patch
-  // $.get('./patches/main.pd', function(patchStr) {
-  //   patch = Pd.loadPatch(patchStr)
-  //   Pd.start()
-  // })
+  var patch
+  $.get('./patches/main.pd', function(patchStr) {
+    patch = Pd.loadPatch(patchStr)
+    Pd.start()
+  })
 </script>
 
 <body id="container">
