--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div><button class="project"><a href="./tonnetzGrid.html">Tonnetz Grid</a></button></div>
   <div><button class="project"><a href="./Strings/index.html">Cosmic Strings</a></button></div>
   <div><button class="project"><a href="./BoidProject/index.html">Music Boids</a></button></div>
-  <div><button class="project disabled">In Progress...</button></div>
+  <div><button class="project"><a href="./BoidProjectAttempt2/index.html">Revamped Boids WIP</button></div>
   <div><button class="project disabled">In Progress...</button></div>
   <div><button class="project disabled">In Progress...</button></div>
 </div>
