--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 
 <h1>Project Page Hub</li>
-<p>Contributers: Jesse Berezovsky and Huay Din <br>Last updated: 1/23/2021</p>
+<p>Contributers: Jesse Berezovsky and Huay Din <br>Last updated: 1/24/2021</p>
 <div class="projectGrid">
   <div><button class="project"><a href="./tonnetzGrid.html">Tonnetz Grid</a></button></div>
   <div><button class="project"><a href="./Strings/index.html">Cosmic Strings</a></button></div>
   <div><button class="project"><a href="./BoidProject/index.html">Music Boids</a></button></div>
-  <div><button class="project"><a href="./BoidProjectAttempt2/index.html">Revamped Boids WIP</a></button></div>
+  <div><button class="project disabled">In Progress...</button></div>
   <div><button class="project disabled">In Progress...</button></div>
   <div><button class="project disabled">In Progress...</button></div>
 </div>
