--- a/BoidProject/index3.html
+++ b/BoidProject/index3.html
@@ -42,7 +42,7 @@
     let aliDist = boids.alignmentDistance;
 
   </script>
-  <script type="module" src="./realisticBoids.js"></script>
+  <script type="module" src="./boidsBehaviour.js"></script>
 
   <!-- <div class="sound-buttons">
     <div class="on">
