--- a/BoidProject/index3.html
+++ b/BoidProject/index3.html
@@ -45,7 +45,7 @@
     let aliDist = boids.alignmentDistance;
 
   </script>
-  <script type="module" src="./realisticBoids.js"></script>
+  <script type="module" src="./boidBehaviour.js"></script>
 
   <div class="sound-buttons">
       <button id="startOn" onclick="openPatch()">Start Patch</button>
