--- a/index.html
+++ b/index.html
@@ -1,23 +1,91 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
 <head>
-    <title>Tonnetz</title>
-
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+  <title>Omnibus</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="overallStyle.css">
+  <!-- <script src="terminusJS.js"></script> -->
 </head>
-<body>
 
-<h1>Project Page Hub</li>
-<p>Contributers: Jesse Berezovsky and Huay Din <br>Last updated: 3/3/2021</p>
-<div class="projectGrid">
-  <div><button class="project"><a href="./tonnetzGrid.html">Tonnetz Grid</a></button></div>
-  <div><button class="project"><a href="./Strings/index.html">Cosmic Strings</a></button></div>
-  <div><button class="project"><a href="./BoidProject/index3.html">Music Boids</a></button></div>
-  <div><button class="project disabled">In Progress...</button></div>
-  <div><button class="project disabled">In Progress...</button></div>
-  <div><button class="project disabled">In Progress...</button></div>
+<body>
+<div class="header">
+  <h1>huay's mindpalace</h1>
+  <p id="hcaption">this is where I present expositions to an audience of myself</p>
+  <p id="hcaption">/// Under Construction!! ///</p>
+</div>
+
+<!-- I want to have moving ascii clouds. -->
+
+<div class="horl1">
+  <hr>
+</div>
+<!-- Buttons for Sites of more immediate use -->
+<!-- <div class="row">
+  <div class="col-3">
+<nav>
+  <header>Math & Physics</header>
+  <div>Math Writings</div>
+  <div>Physics Writings</div>
+  <div>Education</div>
+</nav>
+</div>
+<div class="col-3">
+<nav>
+  <header>Worldly Interests</header>
+  <div>Game Stuff</div>
+  <div>Music Writings</div>
+  <div>More Mundane Notes</div>
+</nav>
+</div>
+<div class="col-3">
+<nav>
+  <header>Projects & Programs</header>
+  <div>Boo Calculator</div>
+  <div>Boid Project</div>
+</nav>
+</div>
+<div class="col-3">
+<nav>
+  <header>Extra Readings</header>
+  <div>Chinese</div>
+  <div>Japanese</div>
+  <div>Learn Korean Alphabet</div>
+</nav>
+</div>
+</div>  -->
+
+
+<!-- <div class ="row">
+  <div class="col-8 daily-thing">
+  <img src="./imgs/omoriMariWater.png">
+    <p id="dcaption"> heyheyhey </p>
+  </div> -->
+
+  <!-- <div class="col-4 intro">
+    <p> Hello! Welcome to this site!<br>
+        We'll see how this goes.
+    </p>
+  </div>
+</div> -->
+
+<div class="last-up">
+  <p>Last Updated: 8.13.2022</p>
 </div>
 
 </body>
+<!-- <footer>
+  <p> List of times: </p>
+  <ul>
+    <li id="time"> Numbers </li>
+    <li> Last Updated: </li>
+    <li> Last Happy: </li>
+    <li> Last Slept: </li>
+    <li> Last rolled the gacha: </li>
+  </ul>
+</footer> -->
+
+
+
+
 </html>
